tests/baselines/reference/computedPropertyNamesOnOverloads.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(4,5): error TS1168: A computed property name in a method overload must directly refer to a built-in Symbol.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(5,5): error TS1168: A computed property name in a method overload must directly refer to a built-in Symbol.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts (2 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName](v: string);
        ~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must directly refer to a built-in Symbol.
        [methodName]();
        ~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must directly refer to a built-in Symbol.
        [methodName](v?: string) { }
    }